padding in default navbar (prevent overlap)

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1619,3 +1619,10 @@ img:hover+.post-tag {
     font-size: 0.9rem;
     padding: 0.3rem 1rem;
 }
+
+
+/* Navbar Padding */
+
+body {
+    padding-top: 70px; /* Adjust on basis height of navbar - might take many trialss */
+}
